--- a/WebApplication1/Pages/Lokaler/VisAlleLokaler.cshtml
+++ b/WebApplication1/Pages/Lokaler/VisAlleLokaler.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-@model OnlinebookingSystem.Pages.Lokaler.VisAlleLokalerModel
+@model VisAlleLokalerModel
 @{
 } @foreach (var l in Model.Lokaler){<p>@l.Id</p>}
-
