--- a/WebApplication1/Pages/Brugere/VisAlleBrugere.cshtml
+++ b/WebApplication1/Pages/Brugere/VisAlleBrugere.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model OnlinebookingSystem.Pages.Brugere.VisAlleBrugereModel
+@model VisAlleBrugereModel
 @{
 }
 @foreach (var b in Model.Brugere){<p>@b.Navn</p>}
